--- a/style.css
+++ b/style.css
@@ -68,13 +68,10 @@ header {
     border-radius: 100px;
 }
 
-
-
 .logo a {
     font-size: 1em;
     text-decoration: none;
     color: var(--primary_color);
-
 }
 
 nav {}
@@ -106,7 +103,7 @@ nav ul li a::after {
     width: 0%;
     transition: .4s;
     height: 3px;
-    background-color: var(--secondary_color);
+    background-color: var(--linking_color);
 }
 
 nav ul li a:hover:after {
@@ -116,7 +113,7 @@ nav ul li a:hover:after {
 .contact a {
     padding: 12px 20px;
     color: var(--primary_color);
-    background-color: var(--secondary_color);
+    background-color: var(--linking_color);
     border-radius: 30px;
     text-decoration: none;
 }
@@ -134,18 +131,12 @@ nav ul li a:hover:after {
 }
 
 .content_one_sub_container_text .spanner {
-    font-size: 0.9em;
+    font-size: 0.8em;
     font-weight: 500;
-    color: var(--secondary_color);
+    color: var(--linking_color);
     line-height: 1.5;
     width: 100%;
-    max-width: 60%;
     margin-left: 10px;
-    animation-name: hovering;
-    animation-duration: 2s;
-    animation-iteration-count: infinite;
-    animation-timing-function: ease-in-out;
-    animation-play-state: running;
 }
 
 .content_one_sub_container_text h1 {
@@ -164,9 +155,10 @@ nav ul li a:hover:after {
     font-weight: 400;
 }
 
-.email_conntent {
+.email_content {
     display: flex;
-    width: 80%;
+    width: 100%;
+    height: auto;
     padding: 10px;
     justify-content: space-between;
     align-items: center;
@@ -174,8 +166,8 @@ nav ul li a:hover:after {
     border-radius: 60px;
 }
 
-.email_conntent input {
-    width: 60%;
+.email_content input {
+    width: 100%;
     padding: 10px;
     background: none;
     border: none;
@@ -183,12 +175,12 @@ nav ul li a:hover:after {
     color: var(--primary_color);
 }
 
-.email_conntent input::placeholder {
+.email_content input::placeholder {
     font-size: 1.2em;
     color: var(--primary_color);
 }
 
-.email_conntent a {
+.email_content a {
     color: var(--primary_color);
     background: var(--linking_color);
     padding: 0px 5px 4px 25px;
@@ -197,20 +189,6 @@ nav ul li a:hover:after {
     display: inline-flex;
 
     align-items: center;
-}
-
-.email_conntent a .bx {
-    font-size: 2em;
-    margin: 0 0 0 5px;
-}
-
-.cotainer {
-    width: 800px;
-    height: 400px;
-    clip-path: polygon(75% 0, 100% 0, 100% 60%, 100% 100%, 0 100%, 0 17%, 67% 17%);
-    background-color: red;
-    border-radius: 20px;
-    margin: 5rem;
 }
 
 .content_one_sub_container_img {
@@ -250,31 +228,31 @@ nav ul li a:hover:after {
     left: 30%;
     padding: 10px;
     border-radius: 50px;
+    margin: auto;
     display: flex;
     align-items: center;
     justify-content: center;
     background-color: var(--linking_color);
-    animation-name: scaling;
-    animation-duration: 2s;
-    animation-iteration-count: infinite;
-    animation-timing-function: ease-in-out;
-    animation-play-state: running;
+    animation: 2s scaling infinite;
+}
+
+.content_one_sub_container_img_sub_data .bx {
+    transform: rotate(45deg);
+    color: var(--primary-color);
+    font-size: 2em;
 }
 
 @keyframes scaling {
     0% {
         transform: scale(1);
-
     }
 
     50% {
         transform: scale(1.2);
-
     }
 
     100% {
         transform: scale(1);
-
     }
 }
 
@@ -349,7 +327,7 @@ nav ul li a:hover:after {
     border-radius: 20px;
     bottom: 0;
     height: 4px;
-    background-color: var(--secondary_color);
+    background-color: var(--linking_color);
 }
 
 .head p {
@@ -399,7 +377,7 @@ nav ul li a:hover:after {
     height: 100%;
     width: 100%;
     margin: 0;
-    background-color: var(--secondary_color);
+    background-color: var(--linking_color);
 }
 
 .content_two_sub_container_details_img {
@@ -412,7 +390,7 @@ nav ul li a:hover:after {
 .content_two_sub_container_details_img img {
     width: 100%;
     height: 100%;
-    filter: invert(12%) sepia(54%) saturate(4692%) hue-rotate(288deg) brightness(110%) contrast(120%);
+    filter: invert(3%) sepia(54%) saturate(1500%) hue-rotate(315deg) brightness(120%) contrast(130%);
     object-fit: contain;
     transition: .3s;
 }
@@ -491,9 +469,58 @@ nav ul li a:hover:after {
     letter-spacing: 1.5px;
 }
 
+.page-content-details a {
+    padding: 10px;
+    width: 200px;
+    height: auto;
+    display: flex;
+    border-radius: 4px;
+    text-decoration: none;
+    justify-content: center;
+    align-items: center;
+    margin: 15px 0;
+    color: var(--primary_color);
+    font-size: var(--medium_font);
+    background-color: var(--secondary_color);
+}
+
 .content_three_sub_container_link_img {
-    width: 30px;
-    margin: 5px 3px 0 10px;
+    width: 100%;
+    padding: 10px;
+    height: auto;
+    margin: auto;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 100px;
+    background-color: var(--balck_plus);
+}
+
+.content_three_sub_container_link_img div {
+    font-size: 1em;
+    font-weight: 100;
+    color: var(--primary-color);
+}
+
+.content_three_sub_container_link_img .bx {
+    transform: rotate(-45deg);
+    color: var(--linking_color);
+    font-size: 1.4em;
+    padding: 5px;
+    margin: 5px;
+    border-radius: 50px;
+    background-color: var(--primary-color);
+}
+
+.content_three_sub_container_link_img:hover .bx {
+    animation: 3s RotatingBtn;
+}
+
+.content_three_sub_container_link_btn {
+    width: 40%;
+    padding: 10px;
+    height: 60px;
+    margin: auto;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -501,19 +528,47 @@ nav ul li a:hover:after {
     background-color: var(--primary_color);
 }
 
-.content_three_sub_container_link_img img {
-    width: 100%;
-    object-fit: contain;
-    padding: 5px;
-    transform: rotate(-45deg);
-    filter: invert(39%) sepia(40%) saturate(3641%) hue-rotate(318deg) brightness(94%) contrast(96%)
+.content_three_sub_container_link_btn div {
+    font-size: 1em;
+    color: var(--primary-color);
 }
 
+.content_three_sub_container_link_btn .bx {
+    transform: rotate(-45deg);
+    color: var(--linking_color);
+    font-size: 1.6em;
+    padding: 5px;
+    margin: 5px;
+    border-radius: 50px;
+    background-color: var(--primary-color);
+}
+
+.content_three_sub_container_link_btn:hover .bx {
+    animation: 3s RotatingBtn;
+}
+
+@keyframes RotatingBtn {
+    0%{
+        transform: rotate(-45deg);
+    }
+    25%{
+        transform: rotate(0deg);
+    }
+    50%{
+        transform: rotate(180deg);
+    }
+    75%{
+        transform: rotate(360deg);
+    }
+    100%{
+        transform: rotate(-45deg);
+    }
+}
 
 .content_three_sub_container_details {
     width: 100%;
     padding: 7rem 50px 40px;
-    background-color: var(--secondary_color);
+    background-color: var(--linking_color);
     border-radius: 40px;
     clip-path: polygon(39% 0, 46% 18%, 100% 19%, 100% 66%, 100% 100%, 0 100%, 0 0);
 }
@@ -641,7 +696,7 @@ nav ul li a:hover:after {
     position: absolute;
     bottom: 0;
     left: 0;
-    background-color: var(--secondary_color);
+    background-color: var(--linking_color);
     width: 0%;
     height: 3px;
 }
@@ -651,7 +706,7 @@ nav ul li a:hover:after {
     position: absolute;
     bottom: 0;
     left: 0;
-    background-color: var(--secondary_color);
+    background-color: var(--linking_color);
     width: 100%;
     height: 3px;
 
@@ -922,11 +977,9 @@ nav ul li a:hover:after {
 
 }
 
-
 .Slider {
     width: 100%;
 }
-
 
 .swiper-wrapper .swiper-slide {
     width: 100%;
@@ -936,8 +989,6 @@ nav ul li a:hover:after {
     margin: auto;
     text-align: center;
 }
-
-
 
 .swiper-button-next,
 .swiper-button-prev {
@@ -959,46 +1010,6 @@ nav ul li a:hover:after {
 .swiper-button-prev::after {
     font-size: 8px;
 }
-
-.card_box {
-    width: 90%;
-    height: 100%;
-    margin: auto;
-    background-color: var(--primary-color);
-    border-radius: 30px;
-    position: relative;
-}
-
-
-
-
-.card_box h3 {
-    font-size: 1.5em;
-    font-weight: 600;
-    color: var(--secondary_color);
-    margin: 10px 0;
-}
-
-.card_box p {
-    font-size: 1em;
-    width: 100%;
-    max-width: 90%;
-    color: var(--white_color);
-    margin: 20px auto;
-    line-height: 1.8;
-    font-weight: 510;
-    text-align: center;
-}
-
-.card_box img {
-    width: 100px;
-    height: 100px;
-    border-radius: 200px;
-    margin: auto;
-    margin-top: -50px;
-}
-
-
 
 .content_six_sub_container_img img:nth-child(1) {
     width: 80px;
@@ -1048,4 +1059,163 @@ nav ul li a:hover:after {
     bottom: 18%;
     right: 15%;
     object-fit: cover;
+}
+
+.Card_Box.active {
+    justify-content: center;
+    align-items: center;
+    margin: auto;
+    width: 100%;
+    height: auto;
+    background-color: var(--box_background);
+    border-radius: 10px;
+    padding: 5% 10px;
+    display: block;
+    transform: translate(0px, 0px);
+    transition: all 0.9s ease;
+}
+
+.Card_Box {
+    justify-content: center;
+    align-items: center;
+    margin: auto;
+    width: 100%;
+    height: auto;
+    background-color: var(--box_background);
+    border-radius: 10px;
+    padding: 5% 10px;
+    display: none;
+    transform: translate(50%, 10%);
+    transition: all 0.9s ease;
+}
+
+.Card_Box_Container {
+    justify-content: center;
+    align-items: center;
+    margin: auto;
+    width: 100%;
+    height: auto;
+    width: 100px;
+    height: 100px;
+}
+
+.Card_Box_Container img {
+    width: 80px;
+    height: 80px;
+    border-radius: 50%;
+    object-fit: cover;
+}
+
+.Card_Box_Container_Content {
+    justify-content: center;
+    align-items: center;
+    margin: auto;
+    width: 100%;
+    height: auto;
+    padding: 10px 6%;
+    text-align: center;
+}
+
+.Card_Box_Container_Content h2 {
+    font-size: 1.6em;
+    color: var(--primary-color);
+    font-weight: 700;
+}
+
+.Card_Box_Container_Content h2 span{
+    font-size: 1.1em;
+    color: var(--linking_color);
+    font-weight: 700;
+}
+
+.Card_Box_Container_Content p{
+    font-size: 1em;
+    color: var(--primary-color);
+    font-weight: 100;
+}
+
+.Card_Box_Container_Flex {
+    justify-content: space-between;
+    align-items: center;
+    margin: 10px auto;
+    width: 100%;
+    height: auto;
+    text-align: center;
+}
+.Card_Box_Container_Flex span{
+    font-size: 1em;
+    color: var(--linking_color);
+    font-weight: 700;
+    padding: 10px;
+}
+
+.SliderBtnContainer {
+    justify-content: center;
+    align-items: center;
+    margin: auto;
+    width: 100%;
+    height: auto;
+    display: flex;
+    flex-direction: row;
+    z-index: 555;
+}
+
+.TestimonialSliderContainer {
+    justify-content: center;
+    align-items: center;
+    margin: auto;
+    width: 100%;
+    height: auto;
+    display: flex;
+    flex-direction: row;
+    position: relative;
+}
+
+.SliderBtnContainer {
+    justify-content: space-between;
+    align-items: center;
+    margin: auto;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    display: flex;
+    flex-direction: row;
+}
+
+.SliderBtn {
+    justify-content: flex-start;
+    align-items: center;
+    margin: auto;
+    width: 100%;
+    height: auto;
+    display: flex;
+}
+
+.SliderBtn .bx {
+    cursor: pointer;
+    padding: 10px;
+    border-radius: 50px;
+    font-size: 1.4em;
+    font-weight: 100;
+    color: var(--primary-color);
+    background-color: var(--linking_color);
+}
+
+.SliderBtnRight {
+    justify-content: flex-end;
+    align-items: center;
+    margin: auto;
+    width: 100%;
+    height: auto;
+    display: flex;
+}
+
+.SliderBtnRight .bx {
+    cursor: pointer;
+    padding: 10px;
+    border-radius: 50px;
+    font-size: 1.4em;
+    font-weight: 100;
+    color: var(--primary-color);
+    background-color: var(--linking_color);
 }
